// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleStreamDetails reducer should handle MODULE_STREAM_DETAILS_FAILURE 1`] = `
Object {
  "error": "things have gone terribly wrong",
  "itemCount": 0,
  "loading": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "results": Array [],
}
`;

exports[`ModuleStreamDetails reducer should handle MODULE_STREAM_DETAILS_REQUEST 1`] = `
Object {
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "results": Array [],
}
`;

exports[`ModuleStreamDetails reducer should handle MODULE_STREAM_DETAILS_SUCCESS 1`] = `
Object {
  "itemCount": 0,
  "loading": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "results": Array [],
}
`;

exports[`ModuleStreamDetails reducer should return the initial state 1`] = `
Object {
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "results": Array [],
}
`;
